FIX : 배포에 맞게 경로 수정 및 네이밍 스네이크 통일

--- a/AiService/.env
+++ b/AiService/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
+DB_HOST=k8s-default-postgres-8756371d73-960d1765a31c280e.elb.ap-northeast-2.amazonaws.com
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=admin
+DB_PASSWORD=example
 DB_NAME=mypostgres
