fix:workflow -> .github 폴더로 이동

--- a/AiService/.env
+++ b/AiService/.env
@@ -3,3 +3,4 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=example
 DB_NAME=mypostgres
+GROQ_API_KEY=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
