fix:deploy 파일 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: Create .env from secret
-        run: echo "./AiService/${{ secrets.ENV }}" > .env
+        run: echo "${{ secrets.ENV }}" > ./AiService/.env
 
       - name: push the image to Amazon ECR
         id: build-image
