--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,5 +64,4 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: aiservice
         run: |
-          kubectl set image deployment/aiservice aiservice=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          kubectl rollout status deployment/aiservice
+          kubectl rollout restart deployment/aiservice
