--- a/AiService_suggest/Dockerfile
+++ b/AiService_suggest/Dockerfile
@@ -13,4 +13,4 @@ RUN python -m pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Command to run the application
-CMD ["uvicorn", "main:app", "--reload", "--port", "8089"]
+CMD ["uvicorn", "main:app", "--reload", "--port", "8089", "--host", "0.0.0.0"]
