--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,5 +69,5 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: aiservice
         run: |
-          kubectl restart status deployment/aiservice
-          kubectl restart status deployment/ai-suggest
+          kubectl rollout restart deployment/aiservice
+          kubectl rollout restart deployment/ai-suggest
